src/objects/OrderLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Cost_RMB__c</fullName>
        <label>成本(￥)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>订单</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>订单项</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Packet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>包裹</label>
        <referenceTo>Packet__c</referenceTo>
        <relationshipLabel>订单项</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_RMB__c</fullName>
        <label>价格(￥)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>OrderLineItems</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Color__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&quot;Undelivered&quot;), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 50), IF( ISPICKVAL(Status__c,&quot;Delivered&quot;), IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 20, 50), IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 50)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>颜色</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状态</label>
        <picklist>
            <picklistValues>
                <fullName>Undelivered</fullName>
                <color>#FF6666</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
                <color>#78C953</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>OrderLineItem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Price_RMB__c</columns>
        <columns>Cost_RMB__c</columns>
        <columns>Notes__c</columns>
        <columns>Order__c</columns>
        <columns>Packet__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Color__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>Delivered</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Price_RMB__c</columns>
        <columns>Cost_RMB__c</columns>
        <columns>Notes__c</columns>
        <columns>Order__c</columns>
        <columns>Packet__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Color__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <label>已发货</label>
    </listViews>
    <listViews>
        <fullName>Received</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Price_RMB__c</columns>
        <columns>Cost_RMB__c</columns>
        <columns>Notes__c</columns>
        <columns>Order__c</columns>
        <columns>Packet__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Color__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <label>已收货</label>
    </listViews>
    <listViews>
        <fullName>Undelivered</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Price_RMB__c</columns>
        <columns>Cost_RMB__c</columns>
        <columns>Notes__c</columns>
        <columns>Order__c</columns>
        <columns>Packet__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Color__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Undelivered</value>
        </filters>
        <label>未发货</label>
    </listViews>
    <nameField>
        <displayFormat>OLI-{000000}</displayFormat>
        <label>订单项编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>